[issue-sonar][UserService][V01]: se corrigen issues.
[calegria]
Se vuelve a probar todo el flujo por los errores sonar identificados.